--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Depends: 
     R (>= 2.10)
+URL: https://mrdwab.github.io/mathrrr, https://github.com/mrdwab/mathrrr
+BugReports: https://github.com/mrdwab/mathrrr/issues
