as_proper added and as_decimal made more consistent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,fraction)
 export(as_decimal)
 export(as_fraction)
 export(as_improper)
+export(as_proper)
 export(common_factors)
 export(factors_of)
 export(least_common_multiple)
