renamed as_proper to as_simplified and changed the classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(add_fractions)
 export(as_decimal)
 export(as_fraction)
 export(as_improper)
-export(as_proper)
+export(as_simplified)
 export(common_factors)
 export(divide_fractions)
 export(factors_of)
