grouped_median added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(as_simplified)
 export(common_factors)
 export(divide_fractions)
 export(factors_of)
+export(grouped_median)
 export(least_common_multiple)
 export(multiply_fractions)
 export(parse_fraction)
