--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,9 @@ export(as_simplified)
 export(common_factors)
 export(divide_fractions)
 export(factors_of)
+export(grouped_mean)
 export(grouped_median)
+export(grouped_mode)
 export(least_common_multiple)
 export(multiply_fractions)
 export(parse_fraction)
